test/classes/initializers/phase1/grandparentAccess.good
grandparentAccess.chpl:21: In initializer:
grandparentAccess.chpl:22: error: cannot access parent field "a" before super.init() or this.init()
